Trying to change citation to APA in text and parenthesis...

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -16,7 +16,7 @@
 Ocean color studies at a global scale, such as chlorophyll-{\it a} level trends in oceans, can be investigated using the heritage Ocean Color satellites (e.g. \acrfull{seawifs}, \acrfull{modis}). These satellites satisfied the spatial requirement for these kinds of studies. However, when the region of interest includes coastal or inland waters, which could be considered Case 2 water, their spatial resolution of roughly a thousand meters are not enough to resolve smaller water bodies. These kinds of waters are important for us, because it is these kinds of waters that we have the most interaction with, for drinking and recreation. 
 
 % New medium spatial resolution
-The launching of a new generation of high spatial resolution satellites (e.g. \acrshort{nasa}'s Landsat 8 \cite{Irons:2012}, \acrshort{esa}'s Sentinel 2 \cite{Malenovsky:2012}) is opening a complete new era in the remote sensing of coastal and inland waters. New sensor specifications could meet the requirements needed to have available the same kinds of tools (e.g. Chl-{\it a} product) that the first generation of ocean color satellites (a.k.a. heritage Ocean Color satellites), such as MODIS (\cite{Esaias1998}) and SeaWiFS (\cite{McClain2004}), made available for open ocean science more than a decade and half ago. The hope is to have these kinds of tools for coastal and inland waters available at a global scale and on a regular basis, similar to MODIS capabilities for open oceans (e.g. MODIS's Chl-{\it a} product). Although Landsat 8 does not have a daily frequency as MODIS does, its 16-day frequency makes it a good candidate to accomplish this endeavor, and most importantly, prepares the way for future missions with similar spatial resolution specifications (e.g. Sentinel 2, \acrfull{hyspiri}).
+The launching of a new generation of high spatial resolution satellites (e.g. \acrshort{nasa}'s Landsat 8 \cite{Irons:2012}, \acrshort{esa}'s Sentinel 2 \cite{Malenovsky:2012}) is opening a complete new era in the remote sensing of coastal and inland waters. New sensor specifications could meet the requirements needed to have available the same kinds of tools (e.g. Chl-{\it a} product) that the first generation of ocean color satellites (a.k.a. heritage Ocean Color satellites), such as MODIS \cite{Esaias1998} and SeaWiFS \cite{McClain2004}, made available for open ocean science more than a decade and half ago. The hope is to have these kinds of tools for coastal and inland waters available at a global scale and on a regular basis, similar to MODIS capabilities for open oceans (e.g. MODIS's Chl-{\it a} product). Although Landsat 8 does not have a daily frequency as MODIS does, its 16-day frequency makes it a good candidate to accomplish this endeavor, and most importantly, prepares the way for future missions with similar spatial resolution specifications (e.g. Sentinel 2, \acrfull{hyspiri}).
 
 % Landsat
 The Landsat project has been monitoring the earth for over four decades, being the longest uninterrupted data set available. The Landsat satellites' main mission is to image the land areas of the earth and therefore there are typically no open ocean (case 1 water) images available. This is one of the reason why Landsat satellites have been underestimated by the ocean color community for the study of water bodies. In addition, the Landsat instruments have generally had broad bands and low \acrfull{snr} when compared to heritage ocean color satellites such as SeaWiFS and MODIS. Carrying two instruments onboard, the \acrfull{oli} and the \acrfull{tirs}, Landsat 8 is the first of a new generation of Landsat satellites with state-of-the-art technology \cite{Irons:2012}. Since its launch in 2013, the OLI instrument onboard Landsat 8 has created high expectations in the ocean color community. With its 12-bit quantization and improved SNR, OLI is a big improvement to the Landsat mission. In addition, OLI includes a new coastal band that increased the spectral resolution of the instrument. These improvements are the main drivers to hypothesize that the Landsat 8 satellite will have a better performance in water quality studies than its predecessors. \cite{Roy:2014} stated this potential use of Landsat 8 for fresh and coastal water studies, mainly due to a reported SNR that exceeded expectations and the new coastal band. Therefore, the overall objective of this research is to investigate the performance of Landsat 8 for accurately retrieving water constituents.
