--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -319,8 +319,8 @@
         \@degreetitle \\
         \bigskip
         \fontsize{12}{20}\selectfont
-        by \\
-        \@degreeauthor \\
+        %by \\
+        %\@degreeauthor \\
         \vspace{0.5cm}
         \textbf{Abstract}
         \medskip
