--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,4 @@
-% \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[draft,oneside,10pt]{book}
 
 \usepackage{graphicx}
 
@@ -22,20 +21,24 @@
 
 \usepackage{longtable}
 
-\usepackage[twoside]{geometry} % for page margin for odd and even pages to bind them
+\usepackage{geometry} % for page margin for odd and even pages to bind them
 \geometry{
 %  top=1.0in,  
- inner=1.5in,
-%  outer=1.5in,
+ % inner=1.5in,
+ outer=1.0in,
   bottom=1.2in,
 %  headheight=3ex, 
   headsep=3ex,         
 }
 
+\doublespacing
+% \onehalfspacing
+
+
 \usepackage{fancyhdr} % for the header
 \pagestyle{fancy}
-% \fancyhead[LO, RE]{\rightmark}
-\fancyhead[LE, RO]{\thepage}
+\fancyhead[L]{\it \leftmark}
+\fancyhead[R]{\thepage}
 \fancyfoot[]{}
 % \renewcommand{\headrulewidth}{0.3pt}
 
@@ -107,7 +110,6 @@
 
 \usepackage{indentfirst}
 \setlength{\parindent}{20pt}
-\doublespacing
 
 % Added 11-17-13 ----------------------------------------
 % Select what to do with todonotes: 
@@ -164,7 +166,7 @@
 
 % Added 09-28-15 ----------------------------------------
 % Load the package with the acronym option
-\usepackage[acronym,nomain,toc]{glossaries}
+\usepackage[acronym,nomain,toc,ucmark=true]{glossaries}
 % Generate the glossary
 \makeglossaries
 \renewcommand*{\acronymname}{Acronyms and Abbreviations}
@@ -295,36 +297,17 @@
 
 % \pagenumbering{gobble} % no page number displayed
 \pagenumbering{roman}
-\makedeclaration
 
-\clearpage
-\thispagestyle{empty}
-\phantom{a}
-\vfill
+\makedeclaration
 
 \makePHDproposalapproval
 
-\clearpage
-\thispagestyle{empty}
-\phantom{a}
-\vfill
-
-
 \makecopyright
-
-\clearpage
-\thispagestyle{empty}
-\phantom{a}
-\vfill
-
 
 % \maketitle
 
-
-
 % \chapter*{Abstract}
 % \addcontentsline{toc}{chapter}{Abstract}
-
 
 
 \begin{abstract}
@@ -384,10 +367,6 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 
 \end{abstract}
 
-\clearpage
-\thispagestyle{empty}
-\phantom{a}
-\vfill
 
 % \chapter*{Acknowledgements}
 % %*****************************************************************************************************
@@ -399,10 +378,6 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 \end{acknowledgements}
 %*****************************************************************************************************
 
-\clearpage
-\thispagestyle{empty}
-\phantom{a}
-\vfill
 
 \begin{dedication}
 % \addcontentsline{toc}{chapter}{Dedication}
@@ -426,7 +401,10 @@ Mis amados viejitos (My dear parents),\\ Osvaldo Concha Silva\\ y (and) \\ Nelly
 
 
 % \glsaddall
+
 \printglossaries
+
+
 % \addcontentsline{toc}{chapter}{Acronyms and Abbreviations}
 
 
