changed inner margin

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -23,8 +23,8 @@
 
 \usepackage{geometry} % for page margin for odd and even pages to bind them
 \geometry{
-%  top=1.0in,  
- % inner=1.5in,
+% top=1.0in,  
+ inner=3.5cm,
  outer=1.0in,
   bottom=1.2in,
 %  headheight=3ex, 
